# cytube-bot

./: .coveragerc  .editorconfig  .gitignore  .pylintrc  API_TOKENS.md  ARCHITECTURE.md  CHANGELOG.md  DAEMON_GUIDE.md  LICENSE  MANIFEST.in  PM_GUIDE.md  QUICKSTART.md  README.md  README.rst  SETUP.md  SHELL_COMMANDS.md  TESTING.md  WEB_STATUS_SUMMARY.md  __version__.py  build.sh  config-prod.json  config-test.json  cytube_daemon.bat  cytube_daemon.py  cytube_daemon.sh  pyproject.toml  pytest.ini  requirements.txt  run_bot.bat  run_bot.sh  run_status_server.bat  run_status_server.sh  setup.py  setup_bot.py  test  test_shell.py
common/: __init__.py  config.py  database.py  shell.py
cytube_bot/: proxy.py  util.py
cytube_bot_async/: __init__.py  bot.py  channel.py  error.py  media_link.py  playlist.py  proxy.py  socket_io.py  user.py  util.py
docs/: .buildinfo  LLM_CONFIGURATION.md  PRD-LLM-Integration.md  SPEC-Commit-2-Ollama-Remote-Support.md  genindex.html  index.html  py-modindex.html  roadmap-sprint-7-9.md  search.html
docsrc/: Makefile  coroutine_doc.py
examples/: config.py  shell.py
lib/: __init__.py  bot.py  channel.py  error.py  media_link.py  proxy.py  socket_io.py  user.py  util.py
monitoring/: README.md  alert_rules.yml  alertmanager.yml  prometheus.yml
scripts/: deploy.sh  rollback.sh  verify_deployment.py  verify_production.py
systemd/: README.md  cytube-bot.service  cytube-web.service
tests/: .pylintrc  __init__.py  conftest.py  test_infrastructure.py  test_util.py
web/: README.md  dashboard.py  metrics_exporter.py  status_server.py
(+167 files in other folders)
